--- a/app-misc/dvtm/ChangeLog
+++ b/app-misc/dvtm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/dvtm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dvtm/ChangeLog,v 1.12 2012/09/20 00:53:06 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dvtm/ChangeLog,v 1.13 2012/11/03 11:20:32 chithanh Exp $
+
+  03 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  dvtm-0.8.ebuild:
+  Keyword ~arm
 
 *dvtm-0.8 (20 Sep 2012)
 
