--- a/net-analyzer/pmacct/ChangeLog
+++ b/net-analyzer/pmacct/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/pmacct
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.81 2012/08/23 03:18:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.82 2012/11/03 11:30:36 pinkbyte Exp $
+
+  03 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> files/pmacctd-init.d:
+  Improve initscript wrt bug #426956. Thanks to Jens Ott for patch
 
 *pmacct-0.14.1 (23 Aug 2012)
 
