--- a/net-im/emesene/ChangeLog
+++ b/net-im/emesene/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/emesene
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/emesene/ChangeLog,v 1.35 2012/11/03 11:41:27 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/emesene/ChangeLog,v 1.36 2012/11/03 11:42:08 hwoarang Exp $
+
+  03 Nov 2012; Markos Chandras <hwoarang@gentoo.org> emesene-2.12.5.ebuild,
+  emesene-2.12.9.ebuild, emesene-9999.ebuild:
+  Slotmove 2->0
 
   03 Nov 2012; Markos Chandras <hwoarang@gentoo.org> emesene-9999.ebuild:
   Fix Name entry in desktop file. Symlink executable from site-packages to
