--- a/media-video/smplayer2/ChangeLog
+++ b/media-video/smplayer2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/smplayer2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer2/ChangeLog,v 1.4 2012/09/07 15:45:51 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer2/ChangeLog,v 1.5 2012/11/03 12:57:24 pinkbyte Exp $
+
+  03 Nov 2012; Sergey Popov <pinkbyte@gentoo.org>
+  smplayer2-0.7.0_pre20111120.ebuild, smplayer2-0.7.1_p20120301.ebuild,
+  smplayer2-0.7.3_p20120524.ebuild:
+  Fix QA issues with desktop files
 
 *smplayer2-0.7.3_p20120524 (07 Sep 2012)
 
