--- a/www-servers/thttpd/ChangeLog
+++ b/www-servers/thttpd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/thttpd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/thttpd/ChangeLog,v 1.48 2012/08/19 16:25:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/thttpd/ChangeLog,v 1.49 2012/11/03 13:55:41 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> thttpd-2.26.4-r1.ebuild:
+  stable ppc ppc64, bug #441548
 
   19 Aug 2012; Raúl Porcel <armin76@gentoo.org> thttpd-2.26.2.ebuild,
   thttpd-2.26.4-r1.ebuild:
@@ -253,4 +256,3 @@
   files/thttpd-2.25/thttpd.conf.sample, files/thttpd-2.25/thttpd.confd,
   files/thttpd-2.25/thttpd.init:
   Initial import; thanks to Thomas Eckert <eckert.thomas@gmx.net> in bug #36173
-
