--- a/media-video/ffmpegthumbnailer/ChangeLog
+++ b/media-video/ffmpegthumbnailer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ffmpegthumbnailer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpegthumbnailer/ChangeLog,v 1.142 2012/09/20 09:55:32 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpegthumbnailer/ChangeLog,v 1.143 2012/11/03 17:24:55 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  ffmpegthumbnailer-2.0.8.ebuild:
+  stable ppc ppc64, bug #441408
 
   20 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
   -ffmpegthumbnailer-2.0.7.ebuild:
@@ -643,4 +647,3 @@
   31 Mar 2007; Samuli Suominen <ssuominen@gentoo.org>
   +ffmpegthumbnailer-1.1.ebuild:
   Initial commit.
-
