--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7098 2012/11/03 15:39:08 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7099 2012/11/03 18:39:30 hwoarang Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  03 Nov 2012; Markos Chandras <hwoarang@gentoo.org> package.mask:
+  Update mask for app-benchmarks/ltp
 
   03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   hardened/linux/uclibc/mips/package.mask:
