--- a/sys-apps/dtc/ChangeLog
+++ b/sys-apps/dtc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/dtc
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dtc/ChangeLog,v 1.10 2011/10/17 21:39:35 vapier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dtc/ChangeLog,v 1.11 2012/11/03 19:20:21 ssuominen Exp $
+
+  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> dtc-1.3.0.ebuild,
+  dtc-9999.ebuild:
+  Rename ftdump to ftdump.dtc if present wrt #372895 by "dacook"
 
 *dtc-9999 (17 Oct 2011)
 
