--- a/sys-apps/dtc/ChangeLog
+++ b/sys-apps/dtc/ChangeLog
@@ -1,9 +1,13 @@
 # ChangeLog for sys-apps/dtc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dtc/ChangeLog,v 1.12 2012/11/03 19:22:25 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dtc/ChangeLog,v 1.13 2012/11/03 19:24:19 ssuominen Exp $
+
+  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -dtc-1.0.0.ebuild,
+  -files/dtc-1.0.0-Makefile.patch, -dtc-1.2.0.ebuild:
+  old
 
   03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> dtc-1.3.0.ebuild:
-  ppc/ppc64 stable wrt #439678
+  amd64/ppc/ppc64/x86 stable wrt #439678
 
   03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> dtc-1.3.0.ebuild,
   dtc-9999.ebuild:
