--- a/dev-python/simplejson/ChangeLog
+++ b/dev-python/simplejson/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/simplejson
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.76 2012/09/23 22:00:02 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.77 2012/11/03 20:28:50 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> simplejson-2.6.2.ebuild:
+  stable ppc, bug #441300
 
   23 Sep 2012; Tim Harder <radhermit@gentoo.org> simplejson-2.6.2.ebuild:
   Revert return value on failure.
