--- a/net-analyzer/iptraf-ng/ChangeLog
+++ b/net-analyzer/iptraf-ng/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/iptraf-ng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptraf-ng/ChangeLog,v 1.46 2012/11/03 17:52:59 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptraf-ng/ChangeLog,v 1.47 2012/11/03 22:52:09 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  iptraf-ng-1.1.3.1-r1.ebuild:
+  stable arm, bug #441426
 
   03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   iptraf-ng-1.1.3.1-r1.ebuild:
