--- a/x11-drivers/xf86-video-ati/ChangeLog
+++ b/x11-drivers/xf86-video-ati/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-drivers/xf86-video-ati
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.177 2012/08/26 19:40:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.178 2012/11/06 21:13:11 chithanh Exp $
+
+*xf86-video-ati-7.0.0 (06 Nov 2012)
+
+  06 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +xf86-video-ati-7.0.0.ebuild, xf86-video-ati-6.14.6-r1.ebuild,
+  xf86-video-ati-6.14.6.ebuild:
+  Version bump. Drop some fbsd keywords, bug #433403.
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org>
   xf86-video-ati-6.14.4-r1.ebuild:
