--- a/x11-drivers/xf86-video-ati/ChangeLog
+++ b/x11-drivers/xf86-video-ati/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-ati
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.178 2012/11/06 21:13:11 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.179 2012/11/06 21:27:55 chithanh Exp $
+
+  06 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org> metadata.xml,
+  xf86-video-ati-7.0.0.ebuild:
+  Add USE flags for glamor and udev.
 
 *xf86-video-ati-7.0.0 (06 Nov 2012)
 
