--- a/app-admin/puppet/ChangeLog
+++ b/app-admin/puppet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/puppet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.129 2012/11/06 22:45:32 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.130 2012/11/06 22:55:56 tampakrap Exp $
+
+  06 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> puppet-2.7.11.ebuild,
+  puppet-2.7.12.ebuild, puppet-2.7.13.ebuild:
+  Append GPL-2 in all ebuilds to cover the initscript license, bug 425870
 
   06 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> puppet-3.0.1.ebuild:
   vim-syntax is split to puppet-syntax, bug 417085
