--- a/net-mail/metamail/ChangeLog
+++ b/net-mail/metamail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/metamail
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/metamail/ChangeLog,v 1.48 2012/11/06 17:09:05 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/metamail/ChangeLog,v 1.49 2012/11/07 02:20:58 blueness Exp $
+
+  07 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  metamail-2.7.53.3-r1.ebuild:
+  stable ppc ppc64, bug #441462
 
   06 Nov 2012; <ago@gentoo.org> metamail-2.7.53.3-r1.ebuild:
   Stable for amd64, wrt bug #441462
