--- a/net-dns/unbound/ChangeLog
+++ b/net-dns/unbound/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/unbound
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.42 2012/07/13 13:30:58 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.43 2012/11/07 02:28:25 jer Exp $
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> unbound-1.4.17.ebuild:
+  Marked ~hppa (bug #441688).
 
 *unbound-1.4.17 (13 Jul 2012)
 
