--- a/net-dns/unbound/ChangeLog
+++ b/net-dns/unbound/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/unbound
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.43 2012/11/07 02:28:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.44 2012/11/07 02:41:08 jer Exp $
+
+*unbound-1.4.17-r1 (07 Nov 2012)
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> -unbound-1.4.17.ebuild,
+  +unbound-1.4.17-r1.ebuild, +files/unbound-1.4.17-gentoo.patch:
+  Respect CFLAGS (bug #439708).
 
   07 Nov 2012; Jeroen Roovers <jer@gentoo.org> unbound-1.4.17.ebuild:
   Marked ~hppa (bug #441688).
