--- a/net-dns/unbound/ChangeLog
+++ b/net-dns/unbound/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/unbound
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.44 2012/11/07 02:41:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.45 2012/11/07 02:57:38 jer Exp $
+
+*unbound-1.4.18 (07 Nov 2012)
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> +unbound-1.4.18.ebuild:
+  Version bump.
 
 *unbound-1.4.17-r1 (07 Nov 2012)
 
