--- a/net-mail/metamail/ChangeLog
+++ b/net-mail/metamail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/metamail
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/metamail/ChangeLog,v 1.49 2012/11/07 02:20:58 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/metamail/ChangeLog,v 1.50 2012/11/07 03:02:20 blueness Exp $
+
+  07 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  metamail-2.7.53.3-r1.ebuild:
+  stable arm, bug #441462
 
   07 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   metamail-2.7.53.3-r1.ebuild:
