--- a/x11-terms/st/ChangeLog
+++ b/x11-terms/st/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/st
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/st/ChangeLog,v 1.5 2012/03/07 18:17:30 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/st/ChangeLog,v 1.6 2012/11/07 05:43:48 jer Exp $
+
+*st-0.3 (07 Nov 2012)
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> +st-0.3.ebuild:
+  Version bump.
 
   07 Mar 2012; Jeroen Roovers <jer@gentoo.org> st-0.1.1.ebuild,
   st-0.2.1.ebuild, st-9999.ebuild:
