--- a/x11-misc/sprop/ChangeLog
+++ b/x11-misc/sprop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/sprop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/sprop/ChangeLog,v 1.1 2012/11/07 06:16:56 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/sprop/ChangeLog,v 1.2 2012/11/07 06:19:19 jer Exp $
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> sprop-0.1.ebuild:
+  Marked ~x86 too.
 
 *sprop-0.1 (07 Nov 2012)
 
