--- a/sys-apps/dstat/ChangeLog
+++ b/sys-apps/dstat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/dstat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dstat/ChangeLog,v 1.40 2012/09/21 15:43:43 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dstat/ChangeLog,v 1.41 2012/11/07 10:42:33 ago Exp $
+
+  07 Nov 2012; Agostino Sarubbo <ago@gentoo.org> dstat-0.7.2-r1.ebuild:
+  Stable for amd64, wrt bug #435650
 
   21 Sep 2012; Jeroen Roovers <jer@gentoo.org> dstat-0.7.2-r1.ebuild:
   Stable for HPPA (bug #435650).
@@ -171,4 +174,3 @@
   13 Nov 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml,
   +dstat-0.5.2.ebuild:
   Initial import, ebuild written by me.
-
