--- a/net-wireless/spectools/ChangeLog
+++ b/net-wireless/spectools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/spectools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/spectools/ChangeLog,v 1.18 2012/11/06 17:08:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/spectools/ChangeLog,v 1.19 2012/11/07 13:26:57 blueness Exp $
+
+  07 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  spectools-2011.08.1-r2.ebuild:
+  stable ppc, bug #441502
 
   06 Nov 2012; <ago@gentoo.org> spectools-2011.08.1-r2.ebuild:
   Stable for amd64, wrt bug #441502
