--- a/www-apps/venus/ChangeLog
+++ b/www-apps/venus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/venus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/venus/ChangeLog,v 1.4 2012/11/07 10:22:08 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/venus/ChangeLog,v 1.5 2012/11/07 15:44:25 tampakrap Exp $
+
+  07 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> metadata.xml:
+  re-assign package to me, remove sysadmin
 
   07 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> metadata.xml:
   Transfer maintainership to sysadmin team
