--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7113 2012/11/06 22:30:01 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7114 2012/11/07 15:55:39 jlec Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  07 Nov 2012; Justin Lecher <jlec@gentoo.org> updates/4Q-2012:
+  move app-office/texmakerx app-office/texstudio; upstream renaming
 
   06 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> package.mask:
   Add puppet-syntax in p.mask as well
