--- a/www-plugins/adobe-flash/ChangeLog
+++ b/www-plugins/adobe-flash/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.150 2012/11/07 10:39:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.151 2012/11/07 15:59:01 jer Exp $
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org>
+  -adobe-flash-11.2.202.243.ebuild:
+  Old.
 
   07 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
   adobe-flash-11.2.202.251.ebuild:
