--- a/dev-lang/v8/ChangeLog
+++ b/dev-lang/v8/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.252 2012/11/07 16:19:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.253 2012/11/07 16:20:37 ago Exp $
+
+  07 Nov 2012; Agostino Sarubbo <ago@gentoo.org> v8-3.13.7.5.ebuild:
+  Stable for x86, wrt bug #442096
 
   07 Nov 2012; Agostino Sarubbo <ago@gentoo.org> v8-3.13.7.5.ebuild:
   Stable for amd64, wrt bug #442096
