--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.748 2012/11/07 16:20:24 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.749 2012/11/07 16:22:43 ago Exp $
+
+  07 Nov 2012; Agostino Sarubbo <ago@gentoo.org> -chromium-22.0.1229.94.ebuild,
+  -chromium-23.0.1271.40.ebuild, -chromium-23.0.1271.60.ebuild:
+  Remove old
 
   07 Nov 2012; Agostino Sarubbo <ago@gentoo.org> chromium-23.0.1271.64.ebuild:
   Stable for x86, wrt bug #442096
