--- a/media-libs/gnonlin/ChangeLog
+++ b/media-libs/gnonlin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gnonlin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gnonlin/ChangeLog,v 1.19 2012/10/25 20:29:37 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gnonlin/ChangeLog,v 1.20 2012/11/07 20:41:28 tetromino Exp $
+
+  07 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gnonlin-0.10.17.ebuild:
+  Slot gstreamer dependencies in preparation for gstreamer-1.0.
 
   25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> -gnonlin-0.10.13.ebuild,
   -gnonlin-0.10.15.ebuild, -gnonlin-0.10.16.ebuild, gnonlin-0.10.17.ebuild:
