--- a/media-libs/gnonlin/ChangeLog
+++ b/media-libs/gnonlin/ChangeLog
@@ -1,9 +1,9 @@
 # ChangeLog for media-libs/gnonlin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gnonlin/ChangeLog,v 1.20 2012/11/07 20:41:28 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gnonlin/ChangeLog,v 1.21 2012/11/07 21:16:57 tetromino Exp $
 
   07 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  gnonlin-0.10.17.ebuild:
+  gnonlin-0.10.9.ebuild, gnonlin-0.10.17.ebuild:
   Slot gstreamer dependencies in preparation for gstreamer-1.0.
 
   25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> -gnonlin-0.10.13.ebuild,
