--- a/net-firewall/firewalld/ChangeLog
+++ b/net-firewall/firewalld/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/firewalld
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/firewalld/ChangeLog,v 1.4 2012/11/07 08:13:59 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/firewalld/ChangeLog,v 1.5 2012/11/07 22:17:21 cardoe Exp $
+
+  07 Nov 2012; Doug Goldstein <cardoe@gentoo.org> firewalld-0.2.9.ebuild:
+  Rebased patchset to fix icon and systemd issues.
 
   07 Nov 2012; Doug Goldstein <cardoe@gentoo.org> firewalld-0.2.9.ebuild,
   +files/firewalld.module, files/firewalld.init:
