--- a/www-client/opera-next/ChangeLog
+++ b/www-client/opera-next/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.145 2012/11/06 14:34:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.146 2012/11/08 04:58:46 jer Exp $
+
+  08 Nov 2012; Jeroen Roovers <jer@gentoo.org> opera-next-12.10.1652.ebuild,
+  opera-next-12.50.1583.ebuild:
+  Out with QA_PRESTRIPPED, in with QA_PREBUILT (bug #442090).
 
   06 Nov 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.10.1642.ebuild,
   -opera-next-12.10.1644.ebuild, -opera-next-12.10.1646.ebuild,
