--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7116 2012/11/07 20:37:11 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7117 2012/11/08 06:26:02 flameeyes Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  08 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
+  Mask older rb_libtorrent (bug #442314).
 
   07 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org> updates/4Q-2012:
   Slotmove gst-rtsp-server-0.10.x to 0.10, since a gst-1.0 version is in the
