--- a/dev-ruby/tzinfo/ChangeLog
+++ b/dev-ruby/tzinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/tzinfo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.107 2012/10/17 03:20:40 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.108 2012/11/08 06:44:46 graaff Exp $
+
+  08 Nov 2012; Hans de Graaff <graaff@gentoo.org> -tzinfo-0.3.31.ebuild:
+  Cleanup.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> tzinfo-0.3.33.ebuild:
   x86 stable wrt bug #437360
