--- a/sci-libs/libmems/ChangeLog
+++ b/sci-libs/libmems/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/libmems
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/libmems/ChangeLog,v 1.4 2012/11/08 09:09:17 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/libmems/ChangeLog,v 1.5 2012/11/08 09:11:51 jlec Exp $
+
+  08 Nov 2012; Justin Lecher <jlec@gentoo.org> libmems-1.6.ebuild,
+  libmems-9999.ebuild:
+  Merge changes through all revisions
 
 *libmems-1.6_p1 (08 Nov 2012)
 
