--- a/dev-libs/icu/ChangeLog
+++ b/dev-libs/icu/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/icu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.215 2012/11/05 11:56:17 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.216 2012/11/08 13:54:54 scarabeus Exp $
+
+*icu-50.1 (08 Nov 2012)
+
+  08 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> +icu-50.1.ebuild,
+  -icu-50_rc-r3.ebuild:
+  Bump to release.
 
 *icu-50_rc-r3 (05 Nov 2012)
 
