--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.718 2012/11/02 03:32:22 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.719 2012/11/08 15:06:32 blueness Exp $
+
+*hardened-sources-2.6.32-r138 (08 Nov 2012)
+
+  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-2.6.32-r138.ebuild:
+  vanilla-2.6.32.60 + genpatches-2.6.32-48 +
+  grsecurity-2.9.1-2.6.32.60-201211071959
 
 *hardened-sources-3.6.5 (02 Nov 2012)
 
